--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 version: '3.2'
 services:
   linux:
-    image: elixir:1.13.1
+    build: .
     container_name: elixir
     environment:
       MIX_ENV: test
     volumes:
-      - .:.
+      - .:/app
